# tape-storage

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cplus_ci.yml
cmake/: CompileOptions.cmake  Libs.cmake  MoreWarnings.cmake  Werror.cmake
cplus-template/: CMakeLists.txt
cplus-template/app/: CMakeLists.txt
cplus-template/tests/: CMakeLists.txt  TestExample.cpp
libs/: CMakeLists.txt
tape-formatter/: CMakeLists.txt
tape-formatter/src/: CMakeLists.txt  main.cpp
tape-storage/: CMakeLists.txt  config.json
tape-storage/app/include/Tape/: FileTape.h  ITape.h
tape-storage/app/include/Utils/: Future.h
tape-storage/app/src/Tape/: FileTape.cpp
tape-storage/include/Config/: Configs.h  Configuration.h  IConfig.h  JsonConfig.h
tape-storage/include/Formatter/: FileTapeFormatter.h
tape-storage/include/Sorter/: TapeSorter.h
tape-storage/include/Tape/: FileTape.h  ITape.h  Utils.h
tape-storage/include/Tape/Simulator/: EmptyTapeSimulator.h  ITapeSimulator.h  TapeHardwareSimulator.h
tape-storage/resources/: CMakeLists.txt  input-tape.txt  output-tape.txt
tape-storage/src/: CMakeLists.txt  main.cpp
tape-storage/src/Config/: JsonConfig.cpp
tape-storage/src/Formatter/: FileTapeFormatter.cpp
tape-storage/src/Tape/: FileTape.cpp  Utils.cpp
tape-storage/src/Tape/Simulator/: TapeHardwareSimulator.cpp
tape-storage/tests/: CMakeLists.txt
tape-storage/tests/FileTape/: FileTapeTest.cpp  FileTapeTest.h  testTape.txt  writeTestTape.txt
tape-storage/tests/Formatter/: FileTapeFormatterTest.cpp  FileTapeFormatterTest.h
tape-storage/tests/TapeSorter/: TapeSorterTest.cpp  TapeSorterTest.h
