#App
set(APP_NAME tape-formatter)

set(APP_PATH "${CMAKE_CURRENT_LIST_DIR}")
set(APP_SRC_PATH "${APP_PATH}/src")
set(APP_INCLUDE_PATH "${APP_PATH}/include")
set(APP_MAIN "${APP_SRC_PATH}/main.cpp")

file(GLOB_RECURSE APP_SOURCES CONFIGURE_DEPENDS "${APP_SRC_PATH}/*.cpp")
list(FILTER APP_SOURCES EXCLUDE REGEX "${APP_SRC_PATH}/*/main.cpp")

file(GLOB_RECURSE APP_INCLUDE CONFIGURE_DEPENDS "${APP_INCLUDE_PATH}/*.h")

add_subdirectory(src)